# axum_static

./: Cargo.toml  LICENSE  README.md
axum-static/: Cargo.toml
axum-static/src/: lib.rs
examples/basic/: Cargo.toml
examples/basic/public/: index.html
examples/basic/public/nested/: index.html
examples/basic/src/: main.rs
src/: lib.rs
